[gd_scene load_steps=4 format=3 uid="uid://psocsi5kdfdo"]

[ext_resource type="Script" path="res://Game/PuzzleGameMenu.gd" id="1_45r4n"]
[ext_resource type="Texture2D" uid="uid://bqhr0nqy8osli" path="res://assets/backgrounds/background.png" id="2_srij8"]
[ext_resource type="Theme" uid="uid://ckiied77ueyj" path="res://candlelight_theme.tres" id="3_fk0hb"]

[node name="DailyGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45r4n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -48.0
offset_right = 571.0
offset_bottom = 564.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_srij8")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 592.0
offset_right = 73.0
offset_bottom = 621.0
theme = ExtResource("3_fk0hb")
text = "Main Menu"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 720.0
offset_top = 61.0
offset_right = 1096.0
offset_bottom = 632.0

[node name="LevelsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/LevelsContainer"]
layout_mode = 2
theme = ExtResource("3_fk0hb")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 32
text = "Levels
"
horizontal_alignment = 1

[node name="NewGameContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 264.0
offset_right = 576.0
offset_bottom = 648.0
alignment = 1

[node name="NewGameSubContainer" type="VBoxContainer" parent="NewGameContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="NewGameContainer/NewGameSubContainer"]
layout_mode = 2
placeholder_text = "Enter your name:"
max_length = 30

[node name="NewGameButton" type="Button" parent="NewGameContainer/NewGameSubContainer"]
layout_mode = 2
theme = ExtResource("3_fk0hb")
disabled = true
text = "New Game"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_changed" from="NewGameContainer/NewGameSubContainer/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="NewGameContainer/NewGameSubContainer/NewGameButton" to="." method="_on_new_game_pressed"]
